--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "^4.0.1",
     "reactstrap": "^8.7.1",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "universal-cookie": "^4.0.4"
   },
   "scripts": {
